# SIM_mp_autocoup

./: Clothoid.py  CubicSpline.py  README.md  RRTStar_AC.py  RRTStar_clothoid_AC.py  RRT_AC.py  Simple_G2.py  Test2.py
Archive/alpha_version/: SIM_mp_autocoup.py
Archive/beta_version/coupling_planner/: package.xml
Archive/beta_version/coupling_planner/coupling_planner/: node.py  simulation.py
Clothoid/: Clothoid.py  g2_visu.py  latex.py
Logging/: csv_eval.py
PyQt/: pyqt5_test.py  pyqt6_test.py  test.py
RRT/: RRTStar_clothoid_AC.py  RRTStar_clothoid_g1.py  RRTStar_clothoid_g2.py
Testing/: BaselineConversionTest.py  EnumTest.py  LinearInterpolationTest.py  SciPyOptimizeMultipleFunc.py  SciPyOptimizeTest.py  Test2.py  TrapezIntegralTest.py  angleinterpolation.py  keyboardTest.py  linspacetest.py  normalprobtest.py  recalculateWheelangleCurvature.py  resample23.py  rot_mat_to_euler.py
beta_version/coupling_planner/: setup.cfg
beta_version/kingpin_broadcaster/: setup.py
beta_version/kingpin_emulation/: package.xml  setup.cfg  setup.py
beta_version/planner_visualization/: package.xml  setup.py
coupling_planner/: setup.py
coupling_planner/coupling_planner/: coupling_planner_lib.py  coupling_planner_node.py  (+3 more)
kingpin_emulation/: setup.py
mp_autocoup/: G2ClothoidPlanner.py  LIB_mp_autocoup.py  SIM_G2ClothoidPlanner.py  SIM_mp_autocoup.py  VIS_mp_autocoup.py
trailer_coupling/coupling_scope/: package.xml  setup.cfg
trailer_coupling/coupling_scope/coupling_scope/: node.py  scope.py
trailer_coupling/coupling_scope/launch/: coupling_scope.xml
(+34 files in other folders)
